fixing the common problem with float-based layouts is that the floats' container doesn't want to stretch up to accomodate the floats.

--- a/css/selection-lists.less
+++ b/css/selection-lists.less
@@ -16,6 +16,8 @@
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none;
+  width: 100%;
+  overflow: auto;
   div {
     float: left;
     font-family: 'Tahoma';
